--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -10,7 +10,7 @@
                     <strong class="tag is-info">请登录</strong>
 
                     {# <h3 class="title"></h3>                    #}
-                    <form action="/auth/login" method="POST">
+                    <form action="/auth/login?next={{ redirect_to }}" method="POST">
                         {% csrf_token %}
                         <div class="field">
                           <label class="label">学号</label>
@@ -26,9 +26,8 @@
                           </div>
                         </div>
                         {% if status %}
-                            <strong class="tag is-info">{{message}}</strong>
                         {%else%}
-                            <strong class="tag is-info">{{message}}</strong>
+                            <p class="help is-danger">{{message}}</p>
                         {% endif %}
                        <div class="control">
                          <button class="button is-success" type="submit">Submit</button>
