--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,8 @@
         </h2>
         
         <nav class="intro-buttons">
-          <a class="button is-primary is-large" href="#">
+          
+          <a class="button is-primary is-large" href="/auth/login">
             <span>
                 {% if user.is_authenticated %}
                     <strong> 提交</strong>
