--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <nav class="navbar is-transparent">
     <div class="container">
         <div class="navbar-brand">
-            <a class="navbar-item" href="#">**项目展示平台</a>
+            <a class="navbar-item" href="/">**项目展示平台</a>
         </div>
 
         <div id="navMenuTransparent" class="navbar-menu">
