--- a/static/show/css/main.css
+++ b/static/show/css/main.css
@@ -59,3 +59,43 @@
       flex-shrink: 0;
   padding: 3rem 1.5rem;
 }
+
+.bd-more-loves {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 1.5rem;
+  text-align: center;
+}
+
+.bd-more-loves .button {
+  height: auto;
+  padding: 0.75em 1.5em;
+}
+
+.bd-more-loves .button span {
+  -webkit-transform-origin: center center;
+          transform-origin: center center;
+  -webkit-transition: -webkit-transform 86ms ease-out;
+  transition: -webkit-transform 86ms ease-out;
+  transition: transform 86ms ease-out;
+  transition: transform 86ms ease-out, -webkit-transform 86ms ease-out;
+}
+
+.bd-more-loves .button:hover span {
+  -webkit-transform: scale(1.04);
+          transform: scale(1.04);
+}
+
+/*.bd-rainbow {
+  -webkit-animation: rainbow 8s ease infinite;
+  animation: rainbow 8s ease infinite;
+  background-image: linear-gradient(124deg, #ff470f, #ff3860, #b86bff, #3273dc);
+  background-size: 800% 800%;
+}*/
