--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,15 @@
     <title>Hello Bulma!</title>
     <link href="https://cdn.bootcss.com/bulma/0.6.2/css/bulma.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static "show/css/main.css" %}">
+    <link rel="stylesheet" type="text/css" href="{% static "show/css/font-awesome.min.css" %}">
+    <style>
+        #footer{
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+        }
+    </style>
   </head>
     <body>
         <nav class="navbar is-transparent">
@@ -48,6 +57,8 @@
 
         {% endblock %}
   </div>
+
+<script type="text/javascript" color="72,186,255" opacity="1.7" zindex="-2" count="99" src="{% static 'show/js/nest.js' %}"></script>
 <script type="text/javascript">
             // 菜单开关
             function toggleClass(ele, cls) {
@@ -61,5 +72,11 @@
                 }
             }
 </script>
+
+<div class="content has-text-centered" id="footer">
+        <p>
+            ©<a href="#">Web 共享项目</a> 由 <a href="#">Django </a> & <a href="https://bulma.io/">bulma</a> 驱动.
+        </p>
+</div>
 </body>
 </html>
