--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
               </p>
               <div class="hiden">&#12288;&#12288; </div>
               <p class="bd-more-loves-container">
-                <a class="button is-medium is-danger bd-rainbow" href="#">
+                <a class="button is-medium is-danger bd-rainbow" href="{% url "sall" %}">
                   <span> 浏览其他人的 <strong>项目</strong> 🤗</span>
                 </a>
               </p>
