--- a/templates/base.html
+++ b/templates/base.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" type="text/css" href="{% static "show/css/font-awesome.min.css" %}">
     <style>
         #footer{
-            position: fixed;
+            position: fixed;;
             bottom: 0;
             width: 100%;
             text-align: center;
+            overflow : hidden
         }
     </style>
   </head>
@@ -93,6 +94,7 @@
             ©<a href="#">Web 共享项目</a> 由 <a href="#">Django </a> & <a href="https://bulma.io/">bulma</a> 驱动.
         </p>
 </div> -->
+</body>
 <footer id="footer">
   <div class="container">
     <div class="content has-text-centered">
@@ -102,5 +104,4 @@
     </div>
   </div>
 </footer>
-</body>
 </html>
