--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,12 @@
             <div class="intro-column is-video">
                 <div class="bd-book-content">
                     <header class="block bd-book-header">
-                        <span class="tag">New!</span>
-                        <span class="tag is-info">测试版</span>
+                      <div class="control">
+                        <div class="tags has-addons">
+                          <span class="tag is-info">New</span>
+                          <span class="tag is-success">测试版</span>
+                        </div>
+                      </div>
                         <h3 class="title">**项目展示平台 😲</h3>
                     </header>
                 <div class="block bd-book-description is-size-9">
