--- a/templates/project.html
+++ b/templates/project.html
@@ -17,27 +17,69 @@
           <h4><strong>{{i.name}} </strong> </h4> <small>@{{ user.username }}</small> <small></small>
           <br>
          <span> 最后更新</span> : <span> {{i.time}}</span>
+         <br>
+<!--          <span class="tag is-info">删除失败</span> -->
         </p>
       </div>
       <nav class="level is-mobile">
         <div class="level-center">
-          <a class="button is-success" href="#">
+          <a class="button is-success is-rounded" href="#">
             分享
           </a>
           <!-- &#12288; -->
-          <a class="button is-info" href="/usr/share{{i.url}}">
+          <a class="button is-info is-rounded" href="/usr/share{{i.url}}">
             预览
           </a>
           <!-- &#12288; -->
-          <a class="button is-outline" href="#">
-            删除
-          </a> 
+          <a class="button is-danger is-rounded modal-button" onclick="active({{i.id}})">
+                        删除<br>
+            <span class="icon is-small">
+              <i class="fa fa-times"></i>
+            </span>
+          </a>
       </div>
       </nav>
     </div>
   </article>
 </div>
 {% endfor %}
+<div class="modal" id="deleteconfirm">
+  <div class="modal-background"></div>
+  <div class="modal-card">
+    <header class="modal-card-head">
+      <p class="modal-card-title">确认删除</p>
+      <button class="delete" aria-label="close" onclick="unactive()"></button>
+    </header>
+    <section class="modal-card-body">
+        你确定要删除此项目吗?
+    </section>
+    <footer class="modal-card-foot">
+      <button id="confirm" class="button is-success" value="" onclick="deletet(this)">确定</button>
+      <button class="button" onclick="unactive()" >取消</button>
+    </footer>
+  </div>
 </div>
+</div>
+<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+<script type="text/javascript">
+    function active(pid){
+        let ele2 = document.getElementById('deleteconfirm');
+        let cbu = document.getElementById('confirm');
+        cbu.value = pid;
+        ele2.className += ' is-active';
+    }
+    function unactive(){
+        let ele = document.getElementById('deleteconfirm')
+        let reg = 'is-active'
+        ele.className = ele.className.replace(reg, "");
+    }
+    function deletet(ele){
+        var pid = ele.value;
+        $.get("{% url 'delete' %}", {'pid':pid},
+            function(data){
+                location.reload(true);
+        });
+    }
+</script>
 </div>
 {% endblock %}
