--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
                             </a>
                             <div class="navbar-dropdown is-boxed">
                                 <a class="navbar-item" href="{% url "project" %}">我的项目</a>
-                                <a class="navbar-item" href="#">个人资料</a>
+                                <a class="navbar-item" href="{% url "edit" %}"">个人资料</a>
                             </div>
                         </div>
                             <a class="navbar-item" href="/#" title="关于"><span class="bd-emoji">⭐️关于</span></a>
@@ -54,7 +54,7 @@
             </div>
         </nav>
 
-    <div class="main is-flex-mobile is-flex-desktop-only is-flex-desktop-only ">
+    <div class="main is-flex-mobile">
         {% block content %}
 
         {% endblock %}
