--- a/templates/sall.html
+++ b/templates/sall.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+    <title>全部项目</title>
+{% endblock %}
 {% load staticfiles %}
 {% block content %}
 <br>
