--- a/templates/auth/edit.html
+++ b/templates/auth/edit.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+    <title>编辑信息</title>
+{% endblock %}
 {% block content %}
 <div class="hero-body">
 <div class="container">
