--- a/templates/project.html
+++ b/templates/project.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% load staticfiles %}
+{% block title %}
+    <title>我的项目</title>
+{% endblock %}
 {% block content %}
 <br>
 <br>
