--- a/templates/upload.html
+++ b/templates/upload.html
@@ -69,7 +69,7 @@
                     <li>
                         1: 只要你保持项目名字一样,即可以多次上传,修/覆改项目文件
                     <li>
-                        2: 暂不支持除了<strong class="tag has-text-danger">zip</strong>以外的其他压缩包文件
+                        2: 暂不支持除了<strong class="tag has-text-danger">zip，rar</strong>以外的其他压缩包文件
                     <li>
                         3: 压缩包内容 请尽可能地保持项目结构如下：<br>
                         <img src="{% static 'show/img/demo.png' %}" class="img">
@@ -90,7 +90,13 @@
     var file = document.getElementById("id_uploadfile");
     file.onchange = function(){
         if(file.files.length > 0) {
-          document.getElementById('filename').innerHTML = file.files[0].name;
+          if (file.files[0].size / 1024 > 10240){
+            alert("10M以上的文件请联系管理员上传，或者自行优化项目内容");
+            file.value = "";
+          }
+          else{  
+            document.getElementById('filename').innerHTML = file.files[0].name;
+          }
         }
     };
 </script>
