--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
         <nav class="navbar is-transparent">
             <div class="container">
                 <div class="navbar-brand">
-                    <a class="navbar-item" href="/#">********项目</a>
+                    <a class="navbar-item" href="/#">人机交互项目项目展示中心</a>
                     <div class="navbar-burger burger is-active" onclick="toggleClass(this, 'is-active')">
                         <span></span>
                         <span></span>
