--- a/templates/sall.html
+++ b/templates/sall.html
@@ -28,7 +28,7 @@
             分享
           </a>
           <!-- &#12288; -->
-          <a class="button is-info" href="/usr/share{{i.url}}">
+          <a class="button is-info" href="/usr/share{{i.url}}" target="view_window">
             预览
           </a>
           <!-- &#12288; -->
